Finally fixing the css needed to finish removing clipping links from resource list.

--- a/src/ckanext-natcap/ckanext/natcap/assets/css/natcap.css
+++ b/src/ckanext-natcap/ckanext/natcap/assets/css/natcap.css
@@ -218,6 +218,9 @@ body {
 }
 
 .resources .resource-list li a {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     gap: 1rem;
     justify-content: space-between;
     width: 100%;
